# TS-M1N3

./: .gitmodules  CMakeLists.txt  README.md  TS-M1N3.jucer  aax_builds.sh  mac_builds.sh  validate.sh  win_builds.sh
.github/workflows/: cmake.yml
Source/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  RTNeuralLSTM.cpp  RTNeuralLSTM.h
installers/linux/: build_deb.sh
installers/mac/: Intro.txt  TS-M1N3.pkgproj  build_mac_installer.sh
installers/windows/: TS-M1N3_Install_Script.iss  build_win_installer.sh
models/: model_ts9_48k_cond2.json  model_ts9_cond2.json  training_stats_ts9_cond2.json
modules/: CMakeLists.txt
resources/: CMakeLists.txt
